@@ -1,7 +1,7 @@
-$NetBSD: distinfo,v 1.3 2011/12/06 16:14:31 dholland Exp $
+$NetBSD: distinfo,v 1.4 2011/12/14 15:02:24 manu Exp $
 
-SHA1 (SOGo-2.0.0b1.tar.gz) = 42100087bdce048a47cdfe5ce150eaef6271448d
-RMD160 (SOGo-2.0.0b1.tar.gz) = df412186822665d3baeca8bd4cd38a2dc94b12f2
-Size (SOGo-2.0.0b1.tar.gz) = 3768330 bytes
-SHA1 (patch-SoObjects_SOGo_NSString+Utilities.m) = 003d015629adff3b0f2bee165518fa549840901b
+SHA1 (SOGo-2.0.0b3.tar.gz) = 3da9fc968842c521cabb3277017f9e128b3c16c6
+RMD160 (SOGo-2.0.0b3.tar.gz) = 711cd54c4b5cbb7481142c0600131579344cbdbb
+Size (SOGo-2.0.0b3.tar.gz) = 3801713 bytes
 SHA1 (patch-aa) = d5f7c3caea148b6b5f872fb0561d14ec15312c90
+SHA1 (patch-ab) = ec26ccfebdd54d4002e231c021cc4824d810d1e0
